--- a/drivers/video/fbdev/msm/Kconfig
+++ b/drivers/video/fbdev/msm/Kconfig
@@ -151,7 +151,7 @@ config FB_MSM_MDSS_FRC_DEBUG
 	cadence.
 
 config KLAPSE
-    bool CONFIG_KLAPSE
+    bool "KLapse dynamic RGB scaling module"
     depends on FB_MSM_MDSS
     default n
     help
