--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Perf"
+CONFIG_LOCALVERSION="-perf"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -31,7 +31,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
-CONFIG_SCHED_TUNE=y
+CONFIG_SCHED_TUNE=n
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
@@ -667,3 +667,6 @@ CONFIG_PSTORE_PMSG=y
 CONFIG_CMDLINE="ramoops_memreserve=4M"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_PSTORE_LAST_KMSG=y
+CONFIG_UCLAMP_TASK=y
+CONFIG_UCLAMP_BUCKETS_COUNT=5
+CONFIG_UCLAMP_TASK_GROUP=y
